20230223 실습 위주 복습

--- a/src/main/webapp/study/shoppingmall.html
+++ b/src/main/webapp/study/shoppingmall.html
@@ -114,7 +114,6 @@ body {
 .footer span {
 	color: #545454;
 	text-decoration: none;
-	font-weight: bold;	
 }
 
 #totop {
@@ -140,6 +139,7 @@ body {
 	color: white;
 	border-radius: 10px;
 	padding: 2px 5px;
+	margin: 0 5px;
 }
 
 
@@ -150,12 +150,12 @@ body {
 <body>
 
 <div class="navbar" id="top">
-	<a href="#" id="logo">02knit</a>
+	<a href="" id="logo">02knit</a>
 	<ul id="menu">
 		<li><a href="#">contact</a></li>
 		<li><a href="#">shop</a></li>
 		<li><a href="#">cart</a></li>
-		<li><a href="#">login</a></li>
+		<li><a href="./login.html">login</a></li>
 	</ul>
 </div>
 
@@ -258,17 +258,17 @@ body {
 <div class="footer">
 	<a href="https://www.youtube.com/" target="_blank">
 		<img alt="유튜브" src="images/youtube.png" height="20">
-		<span>02knit 유튜브</span>
+		<span>02knit Youtube</span>
 	</a>
 
 	<a href="https://www.kakaotalk.com" target="_blank">
 		<img alt="카카오톡" src="images/kakaotalk.png" height="20">
-		<span>02knit 오픈채팅</span>
+		<span>02knit Kakatotalk</span>
 	</a>
 
 	<a href="https://instagram.com/" target="_blank">
 		<img alt="인스타" src="images/instagram.png" height="20">
-		<span>02knit 인스타그램</span>
+		<span>02knit instagram</span>
 	</a>
 </div>
 
