--- a/src/main/webapp/study/signin.html
+++ b/src/main/webapp/study/signin.html
@@ -6,16 +6,25 @@
 </head>
 <body>
 
-	<header>
-		<!-- 클릭시 메인 페이지로 이동 -->
-		<button onclick="PagrResult(Main_Page)">Remember-Feedback</button>
-		
-		
-		
-		
-	</header>
+<header>
+
+</header>
+
+<form action="">
+
+<div>약관 동의</div>
+
+<fieldset>
+	<input type="checkbox"> 전체동의
+	<div></div>
+	<input type="checkbox" id="must"> 개인회원 약관에 동의
+	
 
 
+</fieldset>
+
+
+</form>
 
 </body>
 </html>
