--- a/src/main/webapp/study/login2.html
+++ b/src/main/webapp/study/login2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Log-in to 02knit</title>
+<title>Insert title here</title>
 
 <style type="text/css">
 
@@ -11,7 +11,7 @@
 }
 
 body {
-	background-color: white;
+	background-color: steelblue;
 	color: #fff;
 	font-family: 'Muli', sans-serif;
 	display: flex;
@@ -23,10 +23,9 @@ body {
 }
 
 .container {
-	background-color: steelblue;
+	background-color: rgba(0,0,0,0.2);
  	padding: 20px 40px; 
  	border-radius: 5px; 
- 	margin : auto;
 }
 
 .container h1 {
