--- a/src/main/webapp/test/test_rv3.html
+++ b/src/main/webapp/test/test_rv3.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
 
 <link rel="stylesheet" href="./test.css">
 
@@ -10,63 +9,46 @@
 
 <script type="text/javascript">
 
-//네이버처럼 동작~
-$(function() {
+$(function(){
 	
-	//아이디가 비어있으면 uid_msg 필수입력요소
+	//내가 원하는 모습 -> 맞는 표현법인지는 모르겠음,,
 	$("#uid").blur(function() {
-		
-		if($("#uid").val()=="") {
-			$("#uid_msg").html("필수 입력요소입니다")
-		} else {
-			$("#uid_msg").html("")
-		}
-		
-	})
-	
-	//----------------------------------------------------------------
+		confirm(this)
+	})	//this로 넣어서 자기 자신을 매개변수로 보내기! ec에 매개변수로 자기 자신이 전달되고, 자기 자신이 보내지므로 check 내에서 ec로 자기자신 지칭 가능
 
-	//비밀번호 클릭하면 규칙 출력
-	$("#upw").click(function() {
-		
-		$("#upw_msg").html("영문자 대/소문자 특수문자, 숫자 포함 8~32자")
-		
-	})
-	
-	//----------------------------------------------------------------
-
-	//비밀번호가 비어있으면 uid_msg 필수입력요소
 	$("#upw").blur(function() {
-		
-		if($("#upw").val()=="") {
-			$("#upw_msg").html("필수 입력요소입니다")
-		} else {
-			$("#upw_msg").html("")
-		}
-		
+		confirm(this)
 	})
 	
-	//----------------------------------------------------------------
-
-	//비밀번호 확인이 비어있으면 uid_msg 필수입력요소
 	$("#upw_check").blur(function() {
-		
-		if($("#upw_check").val()=="") {
-			$("#upw_check_msg").html("필수 입력요소입니다")
-		} else {
-			$("#upw_check_msg").html("")
-		}
-		
+		confirm(this)
 	})
 	
-	//----------------------------------------------------------------
+// 	//이렇게 부르면 ec가 documnet로 출력됨
+// 	$("#uid").blur(confirm(this))
 	
+// 	//이렇게는 부를 수 없는지...
+// 	$("#uid").confirm(this)
 	
 	
 })
 
+//ec, this
+function confirm(ec) {
+	
+// 	console.log("ec", ec)
+	if($(ec).val()=="") {
+		$(ec).next().next().html("필수 입력요소입니다")
+	} else {
+		$(ec).next().next().html("")
+	}
+	
+}
+
+
 </script>
 
+<title>Insert title here</title>
 </head>
 <body>
 
