--- a/src/main/webapp/test/test_rv4.html
+++ b/src/main/webapp/test/test_rv4.html
@@ -11,44 +11,23 @@
 
 $(function(){
 	
-	//공통 함수
-// 	$("#uid").blur(function() {
-		
-// 		if($("#uid").val()=="") {
-// 			$("#uid_msg").html("필수 입력요소입니다")
-// 		} else {
-// 			$("#uid_msg").html("")
-// 		}
-		
-// 	})
-	
-	//내가 원하는 모습 -> 맞는 표현법인지는 모르겠음,,
-// 	$("#uid").blur(confirm())
-	$("#uid").click(check(this))	//this로 넣어서 자기 자신을 매개변수로 보내기! ec에 매개변수로 자기 자신이 전달되고, 자기 자신이 보내지므로 check 내에서 ec로 자기자신 지칭 가능
-// 	$("#upw").blur(confirm())
-// 	$("#upw_check").blur(confirm())
-	
-	
+	$("#uid").confirm()	
+	$("#upw").confirm()
+	$("#upw_check").confirm()
 	
 })
 
-
-
-
-function check(ev) {
+$.fn.confirm = function () {
 	
-// 	console.log("ev", ev)
-// 	console.log("ev.target", ev.target)
-// 	console.log("this", this)
-// 	console.log("this.target", this.target)
-	console.log("span 선택", $(ev.target).prevAll("span#uid_msg"))
-	console.log("input 선택", $(ev.target).prevAll("input#uid"))
+	console.log(this)
 	
-	//이전 인풋의 입력값이 ""이라면
-// 	if($(ev.target).prevAll("input#uid").val()=="") {
-// 		$(ev.target).prevAll("span#uid_msg").html("필수 입력요소입니다")
-// 	}
-// 		$(ev.target).prevAll("span#uid_msg").html("필수 입력요소입니다")
+	$(this).blur(function() {
+		if($(this).val()=="") {
+			$(this).next().next().html("필수 입력요소입니다")
+		} else {
+			$(this).next().next().html("")
+		}
+	})
 	
 }
 
