20230324 col 크기 변경

--- a/src/main/webapp/study/dreamBig_page9.html
+++ b/src/main/webapp/study/dreamBig_page9.html
@@ -38,7 +38,8 @@ table {
 
 <div class="container">
 	<div class="row">
-		<div class="col-4">
+		<div class="col-md-1"></div>
+		<div class="col-md-2">
 			<div class="list-group">
 				<a href = "#" class="list-group-item-action">대시보드</a>		
 				<a href = "#" class="list-group-item-action">회원 관리</a>		
@@ -49,7 +50,7 @@ table {
 				<a href = "#" class="list-group-item-action">문의 관리</a>		
 			</div>
 		</div>
-		<div class="col-8">
+		<div class="col-md-8">
 			<div>
 				<span class="fs-4 fw-bold" style="margin-right: 200px;">상품관리</span>
 				<input type="checkbox" class="me-2"><span class="me-5">상품명</span>
