--- a/src/main/webapp/study/dreamBig_page8.html
+++ b/src/main/webapp/study/dreamBig_page8.html
@@ -35,7 +35,8 @@ table {
 
 <div class="container">
 	<div class="row">
-		<div class="col-4">
+		<div class="col-md-1"></div>
+		<div class="col-md-2">
 			<div class="list-group">
 				<a href = "#" class="list-group-item-action">대시보드</a>		
 				<a href = "" class="list-group-item-action">회원 관리</a>		
@@ -46,7 +47,7 @@ table {
 				<a href = "#" class="list-group-item-action">문의 관리</a>		
 			</div>
 		</div>
-		<div class="col-8">
+		<div class="col-md-8">
 			<div>
 				<span class="fs-4 fw-bold" style="margin-right: 200px;">회원관리</span>
 				<input type="checkbox" class="me-2"><span class="me-5">아이디</span>
