--- a/src/main/webapp/study/dreamBig_page7.html
+++ b/src/main/webapp/study/dreamBig_page7.html
@@ -36,13 +36,12 @@
 
 <style type="text/css">
 
-div {
-	border: 1px solid #ccc;
-}
-
-
 a {
 	text-decoration: none;
+}
+
+.container {
+	margin-top: 100px;
 }
 
 
@@ -56,29 +55,33 @@ a {
 
 <div class="container">
 	<div class="row">
-		<div class="col-4">
+		<div class="col-1"></div>
+		<div class="col-2" style="margin-top: 30px; padding: 30px;">
 			<div class="list-group">
-				<a href = "" class="list-group-item-action">대시보드</a>		
-				<a href = "#" class="list-group-item-action">회원 관리</a>		
-				<a href = "#" class="list-group-item-action">관리자 관리</a>		
-				<a href = "#" class="list-group-item-action">상품 관리</a>		
-				<a href = "#" class="list-group-item-action">주문 관리</a>		
-				<a href = "#" class="list-group-item-action">리뷰 관리</a>		
-				<a href = "#" class="list-group-item-action">문의 관리</a>		
+				<a href = "" class="list-group-item list-group-item-action active">대시보드</a>		
+				<a href = "./dreamBig_page8.html" class="list-group-item list-group-item-action">회원 관리</a>		
+				<a href = "#" class="list-group-item list-group-item-action">관리자 관리</a>		
+				<a href = "./dreamBig_page9.html" class="list-group-item list-group-item-action">상품 관리</a>		
+				<a href = "#" class="list-group-item list-group-item-action">주문 관리</a>		
+				<a href = "#" class="list-group-item list-group-item-action">리뷰 관리</a>		
+				<a href = "#" class="list-group-item list-group-item-action">문의 관리</a>	
 			</div>
 		</div>
 		<div class="col-8 fs-4 fw-bold">
 		일별 방문자 통계
 			 <div id="curve_chart" style="width: 100%; height: 500px"></div>
 		</div>
+		<div class="col-1"></div>
 	</div>
 	
 	<div class="row">
-		<div class="col-4"></div>
+		<div class="col-1"></div>
+		<div class="col-2"></div>
 		<div class="col-8 fs-4 fw-bold">
 		일별 매출 통계
 			<div id="curve_chart" style="width: 100%; height: 500px"></div>
 		</div>
+		<div class="col-1"></div>
 	</div>
 </div>
 
