--- a/src/main/webapp/study/dreamBig_page9_sc.html
+++ b/src/main/webapp/study/dreamBig_page9_sc.html
@@ -7,8 +7,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-<script src="https://kit.fontawesome.com/58712691e2.js" crossorigin="anonymous"></script>
-
 <script  type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
 <script type="text/javascript">
@@ -62,8 +60,8 @@ a {
 		<div class="col-1"></div>
 		<div class="col-2" style="margin-top: 30px; padding: 30px;">
 			<div class="list-group">
-				<a href = "./dreamBig_page7.html" class="list-group-item list-group-item-action">대시보드</a>		
-				<a href = "./dreamBig_page8.html" class="list-group-item list-group-item-action">회원 관리</a>		
+				<a href = "#" class="list-group-item list-group-item-action">대시보드</a>		
+				<a href = "#" class="list-group-item list-group-item-action">회원 관리</a>		
 				<a href = "#" class="list-group-item list-group-item-action">관리자 관리</a>		
 				<a href = "" class="list-group-item list-group-item-action active">상품 관리</a>		
 				<a href = "#" class="list-group-item list-group-item-action">주문 관리</a>		
@@ -73,22 +71,16 @@ a {
 		</div>
 		<div class="col-8">
 			<div  class="mb-4" style="padding: 0 45px;">
-				<span class="fs-4 fw-bold" style="margin-right: 227px;">상품관리</span>
-				<select class="form-select me-5 w-25" style="display: inline-flex;" aria-label="size 3 select example">
+				<span class="fs-4 fw-bold" style="margin-right: 150px;">상품관리</span>
+				<select class="form-select me-5" style="display: inline-flex; width: 30%;" aria-label="size 3 select example">
 				  <option selected>상품 조회</option>
 				  <option value="1">상품명</option>
 				  <option value="2">남은 개수</option>
 				</select>
-<!-- 		      	<form role="search" style="display: inline-flex; width: 30%;"> -->
-<!--         			<input class="form-control" type="search" placeholder="Search"> -->
-<!--         			<button class="btn btn-outline-success" type="submit">Search</button> -->
-<!--      			</form> -->
-				<div class="input-group w-25" style="display: inline-flex;">
-				  <span class="input-group-text" id="basic-addon1">
-				  	<i class="fa-solid fa-magnifying-glass" style="color: #d2d7e0;"></i>
-				  </span>
-				  <input type="search" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
-				</div>
+		      	<form role="search" style="display: inline-flex; width: 30%;">
+        			<input class="form-control" type="search" placeholder="Search">
+        			<button class="btn btn-outline-success" type="submit">Search</button>
+     			</form>
 			</div>
 			<div>
 			<table class="table table-bordered text-center align-middle" style="width: 90%; height: 630px; margin:0 auto;">
@@ -209,11 +201,11 @@ a {
 			<nav aria-label="Page navigation example">
 		  		<ul class="pagination">
 		   			<li class="page-item">
-		      			<a class="page-link disable" href="#" aria-label="Previous">
+		      			<a class="page-link" href="#" aria-label="Previous">
 		        			<span aria-hidden="true">&laquo;</span>
 		      			</a>
 		    		</li>
-		    		<li class="page-item active"><a class="page-link" href="#">1</a></li>
+		    		<li class="page-item"><a class="page-link" href="#">1</a></li>
 		    		<li class="page-item">
 		      			<a class="page-link" href="#" aria-label="Next">
 		        			<span aria-hidden="true">&raquo;</span>
