--- a/src/main/webapp/study/dreamBig_page7.html
+++ b/src/main/webapp/study/dreamBig_page7.html
@@ -2,37 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Insert title here</title>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
- <script type="text/javascript">
-   google.charts.load('current', {'packages':['corechart']});
-   google.charts.setOnLoadCallback(drawChart);
-
-   //나중에 수치 따라 바꾸기
-   function drawChart() {
-     var data = google.visualization.arrayToDataTable([
-       ['Year', 'Sales', 'Expenses'],
-       ['2004',  1000,      400],
-       ['2005',  1170,      460],
-       ['2006',  660,       1120],
-       ['2007',  1030,      540]
-     ]);
-
-     var options = {
-       legend: { position: 'bottom' }
-     };
-
-     var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-     chart.draw(data, options);
-   }
- </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js" integrity="sha512-v3ygConQmvH0QehvQa6gSvTE2VdBZ6wkLOlmK7Mcy2mZ0ZF9saNbbk19QeaoTHdWIEiTlWmrwAL4hS8ElnGFbA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
-<title>Insert title here</title>
+
 
 <style type="text/css">
 
@@ -69,7 +48,9 @@ a {
 		</div>
 		<div class="col-8 fs-4 fw-bold">
 		일별 방문자 통계
-			 <div id="curve_chart" style="width: 100%; height: 500px"></div>
+			<div>
+				 <canvas id="myChart1"></canvas>
+			</div>
 		</div>
 		<div class="col-1"></div>
 	</div>
@@ -79,11 +60,44 @@ a {
 		<div class="col-2"></div>
 		<div class="col-8 fs-4 fw-bold">
 		일별 매출 통계
-			<div id="curve_chart" style="width: 100%; height: 500px"></div>
+<!-- 			<div> -->
+<!-- 				 <canvas id="myChart2"></canvas> -->
+<!-- 			</div> -->
+<div>
+  <canvas id="myChart"></canvas>
+</div>
 		</div>
 		<div class="col-1"></div>
 	</div>
 </div>
+
+
+<script>
+  const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+</script>
+
+
+
+
 
 
 
