--- a/src/main/webapp/study/dreamBig_page9.html
+++ b/src/main/webapp/study/dreamBig_page9.html
@@ -75,10 +75,14 @@ a {
 			<div  class="mb-4" style="padding: 0 45px;">
 				<span class="fs-4 fw-bold" style="margin-right: 227px;">상품관리</span>
 				<select class="form-select me-5 w-25" style="display: inline-flex;" aria-label="size 3 select example">
-				  <option selected>-- 상품 조회 --</option>
+				  <option selected>상품 조회</option>
 				  <option value="1">상품명</option>
 				  <option value="2">남은 개수</option>
 				</select>
+<!-- 		      	<form role="search" style="display: inline-flex; width: 30%;"> -->
+<!--         			<input class="form-control" type="search" placeholder="Search"> -->
+<!--         			<button class="btn btn-outline-success" type="submit">Search</button> -->
+<!--      			</form> -->
 				<div class="input-group w-25" style="display: inline-flex;">
 				  <span class="input-group-text" id="basic-addon1">
 				  	<i class="fa-solid fa-magnifying-glass" style="color: #d2d7e0;"></i>
