--- a/src/main/webapp/study/dreamBig_page10.html
+++ b/src/main/webapp/study/dreamBig_page10.html
@@ -11,22 +11,19 @@
 <script src="https://cdn.tiny.cloud/1/55ehuvxc8umd9m8voamcfvy6e1uv85drgw9fc3q6x89vz6g8/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tinymce/tinymce-jquery@2/dist/tinymce-jquery.min.js"></script>
   
-
 <script>
-$(function() {
-	  $('textarea#tiny').tinymce({
+  $('textarea#tiny').tinymce({
     height: 500,
     menubar: false,
     plugins: [
       'advlist', 'autolink', 'lists', 'link', 'image', 'charmap', 'preview',
       'anchor', 'searchreplace', 'visualblocks', 'fullscreen',
-      'insertdatetime', 'media', 'table', 'code', 'help', 'wordcount','image'
+      'insertdatetime', 'media', 'table', 'code', 'help', 'wordcount'
     ],
-    toolbar: 'undo redo | blocks | image | bold italic backcolor ' +
+    toolbar: 'undo redo | blocks | bold italic backcolor | ' +
       'alignleft aligncenter alignright alignjustify | ' +
-      'bullist numlist outdent indent | removeformat | help',
+      'bullist numlist outdent indent | removeformat | help'
   });
-})
 </script>
 
 
@@ -193,7 +190,7 @@ $(function() {
 				</div>
 			</div>
 <div>
-  <textarea id="tiny" placeholder="상품 상세설명을 작성해주세요"></textarea>
+  <textarea id="tiny">&lt;p&gt;Encoded HTML content&lt;/p&gt;</textarea>
 </div>
 			<div id="btn" class="row  justify-content-around" style="padding: 0 45px;">
 				<button id="addProduct" class="btn btn-primary m-5" type="submit" style="width: 100px">추가</button>
@@ -220,11 +217,6 @@ $(function() {
 		</div>
 	</div>
 </div>
-
-
-
-
-
 
 </body>
 </html>
